erDiagram
    USERS {
        uuid id PK "DEFAULT uuid_generate_v4()"
        varchar email "NOT NULL, UNIQUE"
        varchar name "NOT NULL"
        timestamptz created_at "NOT NULL, DEFAULT now()"
        timestamptz updated_at "NOT NULL, DEFAULT now()"
    }

    -- Payment method tables removed - payment methods are now handled by the gateway directly


    PAYMENTS {
        uuid id PK "DEFAULT uuid_generate_v4()"
        uuid user_id FK "NOT NULL, REFERENCES USERS(id)"
        uuid order_id "NOT NULL"
        integer amount "NOT NULL, CHECK > 0"
        char currency "NOT NULL, CHECK pattern"
        enum status "NOT NULL, DEFAULT PENDING"
        jsonb gateway_response "NOT NULL, DEFAULT '{}'"
        varchar idempotency_key "NULL, UNIQUE"
        timestamptz created_at "NOT NULL, DEFAULT now()"
        timestamptz updated_at "NOT NULL, DEFAULT now()"
    }

    REFUNDS {
        uuid id PK "DEFAULT uuid_generate_v4()"
        uuid payment_id FK "NOT NULL, REFERENCES PAYMENTS(id)"
        integer amount "NOT NULL, CHECK > 0"
        char currency "NOT NULL, CHECK pattern"
        enum status "NOT NULL, DEFAULT PENDING"
        text reason "NULL, Refund reason"
        varchar idempotency_key "NULL, UNIQUE"
        timestamptz created_at "NOT NULL, DEFAULT now()"
        timestamptz updated_at "NOT NULL, DEFAULT now()"
    }

    -- User payment method relationship removed
    USERS ||--o{ PAYMENTS : "user_initiates_payment_transactions"
    -- Payment method relationships removed
    PAYMENTS ||--o{ REFUNDS : "payment_can_have_multiple_refund_requests"